refactored the javaspawn task to javaExecAsync as there was some confusion about the functionality with the name 'javaspawn'